# Multi-Step-Agentic-RAG-Research-Assistant

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/agentic_rag/: cache.py  chat.py  cli.py  config.py  graph.py  llm.py  logging_config.py  prompts.py  server.py  state.py
src/agentic_rag/api/: _serialize.py  runs.py
src/agentic_rag/nodes/: grader.py  planner.py  searcher.py  synthesizer.py
src/agentic_rag/tools/: pdf_loader.py  search.py
tests/: conftest.py  test_cache.py  test_chat.py  test_cli.py  test_grader.py  test_graph_integration.py  test_hitl.py  test_llm.py  test_logging_config.py  test_planner.py  test_searcher.py  test_server.py  test_synthesizer.py
web/: package-lock.json  package.json
web/app/: layout.tsx  page.tsx
web/app/runs/[threadId]/: RunView.tsx  page.tsx
web/components/: NodePanel.tsx  ReportMarkdown.tsx
web/lib/: api.ts  types.ts
