[project]
name = "agentic-rag"
version = "0.1.0"
description = "Production-grade multi-step agentic RAG research assistant"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.50",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.2.0",
    "langchain-community>=0.3.0",
    "langchain-tavily>=0.1.0",
    "duckduckgo-search>=6.3.0",
    "pypdf>=5.0.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "typer>=0.12.0",
    "rich>=13.9.0",
    "tenacity>=9.0.0",
    "structlog>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[project.scripts]
agentic-rag = "agentic_rag.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_rag"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",  # line too long -- handled by formatter
    "B008",  # function call in argument default (Typer uses this idiom)
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
no_implicit_optional = true
strict_equality = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = false
disallow_untyped_defs = false
files = ["src"]
